fix  layout bug

--- a/src/pages/ClassroomPlayerPage.less
+++ b/src/pages/ClassroomPlayerPage.less
@@ -62,6 +62,17 @@
   z-index: 2;
 }
 
+.classroom-player-video-box-safari {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+  video {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .classroom-player-video-portrait {
   width: 100%;
   height: 100%;
